feat: File Manager improvements + system flags

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -157,15 +157,13 @@
   "admin.extensions.requiresSharp": "Requires Sharp extension",
   "admin.extensions.subtitle": "Install extensions for extra functionality",
   "admin.extensions.title": "Extensions",
-  "admin.flags.hidedonatebtn.hint": "You have already donated to this project (thank you!) and want to hide the button from the administration area.",
-  "admin.flags.hidedonatebtn.label": "Hide Donate Button",
-  "admin.flags.ldapdebug.hint": "Log detailed debug info on LDAP/AD login attempts.",
-  "admin.flags.ldapdebug.label": "LDAP Debug",
-  "admin.flags.sqllog.hint": "Log all queries made to the database to console.",
-  "admin.flags.sqllog.label": "SQL Query Logging",
+  "admin.flags.authDebug.hint": "Log detailed debug info of all login / registration attempts.",
+  "admin.flags.authDebug.label": "Auth Debug",
+  "admin.flags.sqlLog.hint": "Log all queries made to the database to console.",
+  "admin.flags.sqlLog.label": "SQL Query Logging",
   "admin.flags.subtitle": "Low-level system flags for debugging or experimental purposes",
   "admin.flags.title": "Flags",
-  "admin.flags.warn.hint": "Doing so may result in data loss or broken installation!",
+  "admin.flags.warn.hint": "Doing so may result in data loss, performance issues or a broken installation!",
   "admin.flags.warn.label": "Do NOT enable these flags unless you know what you're doing!",
   "admin.general.allowComments": "Allow Comments",
   "admin.general.allowCommentsHint": "Can users leave comments on pages? Can be restricted using Page Rules.",
@@ -1603,5 +1601,14 @@
   "common.actions.duplicate": "Duplicate",
   "common.actions.moveTo": "Move To",
   "pageSaveDialog.displayModeTitle": "Title",
-  "pageSaveDialog.displayModePath": "Path"
+  "pageSaveDialog.displayModePath": "Path",
+  "folderDeleteDialog.title": "Confirm Delete Folder",
+  "folderDeleteDialog.confirm": "Are you sure you want to delete folder {name} and all its content?",
+  "folderDeleteDialog.folderId": "Folder ID {id}",
+  "folderDeleteDialog.deleteSuccess": "Folder has been deleted successfully.",
+  "admin.flags.experimental.label": "Experimental Features",
+  "admin.flags.experimental.hint": "Enable unstable / unfinished features. DO NOT enable in a production environment!",
+  "admin.flags.advanced.label": "Custom Configuration",
+  "admin.flags.advanced.hint": "Set custom configuration flags. Note that all values are public to all users! Do not insert senstive data.",
+  "admin.flags.saveSuccess": "Flags have been updated successfully."
 }
