--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1611,5 +1611,8 @@
   "admin.flags.advanced.label": "Custom Configuration",
   "admin.flags.advanced.hint": "Set custom configuration flags. Note that all values are public to all users! Do not insert senstive data.",
   "admin.flags.saveSuccess": "Flags have been updated successfully.",
-  "fileman.copyURLSuccess": "URL has been copied to the clipboard."
+  "fileman.copyURLSuccess": "URL has been copied to the clipboard.",
+  "fileman.folderRename": "Rename Folder",
+  "fileman.renameFolderInvalidData": "One or more fields are invalid.",
+  "fileman.renameFolderSuccess": "Folder renamed successfully."
 }
