feat: file manager improvements + tree db model

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1600,8 +1600,8 @@
   "common.actions.newFolder": "New Folder",
   "common.actions.duplicate": "Duplicate",
   "common.actions.moveTo": "Move To",
-  "pageSaveDialog.displayModeTitle": "Title",
-  "pageSaveDialog.displayModePath": "Path",
+  "pageSaveDialog.displayModeTitle": "Browse Using Titles",
+  "pageSaveDialog.displayModePath": "Browse Using Paths",
   "folderDeleteDialog.title": "Confirm Delete Folder",
   "folderDeleteDialog.confirm": "Are you sure you want to delete folder {name} and all its content?",
   "folderDeleteDialog.folderId": "Folder ID {id}",
