feat: admin editor markdown config overlay

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1678,5 +1678,32 @@
   "welcome.createHome": "Create the homepage",
   "welcome.subtitle": "Let's get started...",
   "welcome.title": "Welcome to Wiki.js!",
-  "admin.editors.useRenderingPipeline": "Uses the rendering pipeline."
+  "admin.editors.useRenderingPipeline": "Uses the rendering pipeline.",
+  "admin.editors.markdown.allowHTML": "Allow HTML",
+  "admin.editors.markdown.allowHTMLHint": "Allow HTML tags in content.",
+  "admin.editors.markdown.linkify": "Auto-linking",
+  "admin.editors.markdown.linkifyHint": "Automatically convert URLs into clickable links.",
+  "admin.editors.markdown.lineBreaks": "Auto Line Breaks",
+  "admin.editors.markdown.lineBreaksHint": "Automatically add linebreaks within paragraphs.",
+  "admin.editors.markdown.typographer": "Typographer",
+  "admin.editors.markdown.typographerHint": "Enable some language-neutral replacement + quotes beautification.",
+  "admin.editors.markdown.underline": "Underline Emphasis",
+  "admin.editors.markdown.underlineHint": "Enable text underlining by using _underline_ syntax.",
+  "admin.editors.markdown.tabWidth": "Code Block Tab Width",
+  "admin.editors.markdown.tabWidthHint": "Amount of spaces for each tab in code blocks.",
+  "admin.editors.markdown.latexEngine": "LaTeX Engine",
+  "admin.editors.markdown.latexEngineHint": "Which engine to use to process TeX/LaTeX expressions.",
+  "admin.editors.markdown.general": "General",
+  "admin.editors.markdown.plantuml": "PlantUML",
+  "admin.editors.markdown.kroki": "Kroki",
+  "admin.editors.markdown.multimdTable": "MultiMarkdown Table",
+  "admin.editors.markdown.multimdTableHint": "Enable support for MultiMarkdown Table features.",
+  "admin.editors.markdown.plantumlHint": "Enable PlantUML Parser",
+  "admin.editors.markdown.krokiHint": "Enable Kroki Diagrams Parser",
+  "admin.editors.markdown.krokiServerUrl": "Kroki Server URL",
+  "admin.editors.markdown.krokiServerUrlHint": "URL to the Kroki server used for image generation.",
+  "admin.editors.markdown.plantumlServerUrl": "PlantUML Server URL",
+  "admin.editors.markdown.plantumlServerUrlHint": "URL to the PlantUML server used for image generation.",
+  "admin.editors.markdown.quotes": "Quotes Style",
+  "admin.editors.markdown.quotesHint": "When typographer is enabled. Double + single quotes replacement pairs. e.g. «»„“ for Russian, „“‚‘ for German, etc."
 }
