feat: save + load admin editors config

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1705,5 +1705,7 @@
   "admin.editors.markdown.plantumlServerUrl": "PlantUML Server URL",
   "admin.editors.markdown.plantumlServerUrlHint": "URL to the PlantUML server used for image generation.",
   "admin.editors.markdown.quotes": "Quotes Style",
-  "admin.editors.markdown.quotesHint": "When typographer is enabled. Double + single quotes replacement pairs. e.g. «»„“ for Russian, „“‚‘ for German, etc."
+  "admin.editors.markdown.quotesHint": "When typographer is enabled. Double + single quotes replacement pairs. e.g. «»„“ for Russian, „“‚‘ for German, etc.",
+  "admin.editors.saveSuccess": "Editors state saved successfully.",
+  "admin.editors.markdown.saveSuccess": "Markdown editor configuration saved successfully."
 }
