feat: markdown editor UX improvements

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1716,5 +1716,8 @@
   "profile.cvdProtanopia": "Protanopia",
   "profile.cvdTritanopia": "Tritanopia",
   "profile.cvdDeuteranopia": "Deuteranopia",
-  "profile.accessibility": "Accessibility"
+  "profile.accessibility": "Accessibility",
+  "editor.toggleScrollLock": "Toggle Scroll Lock",
+  "editor.togglePreviewPane": "Toggle Preview Pane",
+  "editor.renderPreview": "Render Preview"
 }
