feat: editor reason for change + nav fixes

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1531,6 +1531,11 @@
   "editor.props.title": "Title",
   "editor.props.tocMinMaxDepth": "Min/Max Depth",
   "editor.props.visibility": "Visibility",
+  "editor.reasonForChange.field": "Reason",
+  "editor.reasonForChange.optional": "Enter a short description of the reason for this change. This is optional but recommended.",
+  "editor.reasonForChange.reasonMissing": "A reason is missing.",
+  "editor.reasonForChange.required": "You must provide a reason for this change. Enter a small description of what changed.",
+  "editor.reasonForChange.title": "Reason For Change",
   "editor.renderPreview": "Render Preview",
   "editor.save.createSuccess": "Page created successfully.",
   "editor.save.error": "An error occurred while creating the page",
