feat: insert asset in editor

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1164,6 +1164,7 @@
   "common.actions.commit": "Commit",
   "common.actions.confirm": "Confirm",
   "common.actions.copy": "Copy",
+  "common.actions.copyURL": "Copy URL",
   "common.actions.create": "Create",
   "common.actions.deactivate": "Deactivate",
   "common.actions.delete": "Delete",
@@ -1198,6 +1199,7 @@
   "common.actions.select": "Select",
   "common.actions.update": "Update",
   "common.actions.upload": "Upload",
+  "common.actions.view": "View",
   "common.clipboard.failure": "Failed to copy to clipboard.",
   "common.clipboard.success": "Copied to clipboard successfully.",
   "common.clipboard.uuid": "Copy UUID to clipboard.",
