fix: various fixes + profile editing block

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1666,6 +1666,7 @@
   "profile.avatar": "Avatar",
   "profile.avatarClearFailed": "Failed to clear profile picture.",
   "profile.avatarClearSuccess": "Profile picture cleared successfully.",
+  "profile.avatarUploadDisabled": "Your avatar is set by your organization and cannot be changed.",
   "profile.avatarUploadFailed": "Failed to upload user profile picture.",
   "profile.avatarUploadHint": "For best results, use a 180x180 image of type JPG or PNG.",
   "profile.avatarUploadSuccess": "Profile picture uploaded successfully.",
@@ -1682,6 +1683,8 @@
   "profile.dateFormatHint": "Set your preferred format to display dates.",
   "profile.displayName": "Display Name",
   "profile.displayNameHint": "Your full name; shown when authoring content (e.g. pages, comments, etc.).",
+  "profile.editDisabledDescription": "Your wiki administrator has disabled profile editing.",
+  "profile.editDisabledTitle": "Profile info is managed by your organization.",
   "profile.email": "Email Address",
   "profile.emailHint": "The email address used for login.",
   "profile.groups": "Groups",
