feat: update permission system + dark theme fixes + logout

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1129,6 +1129,7 @@
   "auth.loginRequired": "Login required",
   "auth.loginSuccess": "Login Successful! Redirecting...",
   "auth.loginUsingStrategy": "Login using {strategy}",
+  "auth.logoutSuccess": "You've been logged out successfully.",
   "auth.missingEmail": "Missing email address.",
   "auth.missingName": "Name is missing.",
   "auth.missingPassword": "Missing password.",
@@ -1179,6 +1180,7 @@
   "common.actions.generate": "Generate",
   "common.actions.howItWorks": "How it works",
   "common.actions.insert": "Insert",
+  "common.actions.login": "Login",
   "common.actions.manage": "Manage",
   "common.actions.move": "Move",
   "common.actions.moveTo": "Move To",
