feat: make user defaults global + add accessible view docs / refresh labels in admin

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -882,6 +882,8 @@
   "admin.users.darkModeHint": "Display the user interface using dark mode.",
   "admin.users.dateFormat": "Date Format",
   "admin.users.dateFormatHint": "How dates should be formatted when displayed to the user.",
+  "admin.users.defaults": "Manage User Defaults",
+  "admin.users.defaultsSaveSuccess": "User defaults saved successfully.",
   "admin.users.delete": "Delete User",
   "admin.users.deleteConfirmForeignNotice": "Note that you cannot delete a user that already created content. You must instead either deactivate the user or delete all content that was created by that user.",
   "admin.users.deleteConfirmReplaceWarn": "Any content (pages, uploads, comments, etc.) that was created by this user will be reassigned to the user selected below. It is recommended to create a dummy target user (e.g. Deleted User) if you don't want the content to be reassigned to any current active user.",
@@ -1202,6 +1204,7 @@
   "common.actions.update": "Update",
   "common.actions.upload": "Upload",
   "common.actions.view": "View",
+  "common.actions.viewDocs": "View Documentation",
   "common.clipboard.failure": "Failed to copy to clipboard.",
   "common.clipboard.success": "Copied to clipboard successfully.",
   "common.clipboard.uuid": "Copy UUID to clipboard.",
