feat: markdown server rendering + use editor config + change password

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -241,6 +241,8 @@
   "admin.general.logoUpl": "Site Logo",
   "admin.general.logoUplHint": "Logo image file, in SVG, PNG, JPG, WEBP or GIF format.",
   "admin.general.logoUploadSuccess": "Site logo uploaded successfully.",
+  "admin.general.pageCasing": "Case Sensitive Paths",
+  "admin.general.pageCasingHint": "Treat paths with different casing as distinct pages.",
   "admin.general.pageExtensions": "Page Extensions",
   "admin.general.pageExtensionsHint": "A comma-separated list of URL extensions that will be treated as pages. For example, adding md will treat /foobar.md the same as /foobar.",
   "admin.general.ratingsOff": "Off",
@@ -873,11 +875,12 @@
   "admin.users.basicInfo": "Basic Info",
   "admin.users.changePassword": "Change Password",
   "admin.users.changePasswordHint": "Change the user password. Note that the current password cannot be recovered.",
+  "admin.users.changePasswordSuccess": "User password was updated successfully.",
   "admin.users.create": "Create User",
   "admin.users.createInvalidData": "Cannot create user as some fields are invalid or missing.",
   "admin.users.createKeepOpened": "Keep dialog opened after create",
   "admin.users.createSuccess": "User created successfully!",
-  "admin.users.createdAt": "Created {date}",
+  "admin.users.createdAt": "Created on {date}",
   "admin.users.darkMode": "Dark Mode",
   "admin.users.darkModeHint": "Display the user interface using dark mode.",
   "admin.users.dateFormat": "Date Format",
@@ -911,7 +914,7 @@
   "admin.users.jobTitle": "Job Title",
   "admin.users.jobTitleHint": "The job title of the user.",
   "admin.users.joined": "Joined",
-  "admin.users.lastLoginAt": "Last login",
+  "admin.users.lastLoginAt": "Last login {date}",
   "admin.users.lastUpdated": "Last Updated",
   "admin.users.linkedAccounts": "Linked Accounts",
   "admin.users.linkedProviders": "Linked Providers",
@@ -1233,6 +1236,7 @@
   "common.comments.updateComment": "Update Comment",
   "common.comments.updateSuccess": "Comment was updated successfully.",
   "common.comments.viewDiscussion": "View Discussion",
+  "common.datetime": "{date} 'at' {time}",
   "common.duration.days": "Day(s)",
   "common.duration.every": "Every",
   "common.duration.hours": "Hour(s)",
