feat: editor + page rendering improvements

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1417,6 +1417,7 @@
   "editor.conflict.whatToDo": "What do you want to do?",
   "editor.conflict.whatToDoLocal": "Use your current local version and ignore the latest changes.",
   "editor.conflict.whatToDoRemote": "Use the remote version (latest) and discard your changes.",
+  "editor.createPage": "Create Page",
   "editor.markup.admonitionDanger": "Danger / Important Admonition",
   "editor.markup.admonitionInfo": "Info / Note Admonition",
   "editor.markup.admonitionSuccess": "Tip / Success Admonition",
@@ -1554,6 +1555,7 @@
   "editor.save.processing": "Rendering",
   "editor.save.saved": "Saved",
   "editor.save.updateSuccess": "Page updated successfully.",
+  "editor.saveAndCloseTip": "Ctrl / Cmd + Click to save and close",
   "editor.select.cannotChange": "This cannot be changed once the page is created.",
   "editor.select.customView": "or create a custom view?",
   "editor.select.title": "Which editor do you want to use for this page?",
