feat: admin locales UI + auto locales update + auto version check

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -356,6 +356,7 @@
   "admin.instances.lastSeen": "Last Seen",
   "admin.instances.subtitle": "View a list of active instances",
   "admin.instances.title": "Instances",
+  "admin.locale.active": "Active Locales",
   "admin.locale.activeNamespaces": "Active Namespaces",
   "admin.locale.autoUpdate.hint": "Automatically download updates to this locale as they become available.",
   "admin.locale.autoUpdate.hintWithNS": "Automatically download updates to all namespaced locales enabled below.",
@@ -368,6 +369,8 @@
   "admin.locale.download": "Download",
   "admin.locale.downloadNew": "Install New Locale",
   "admin.locale.downloadTitle": "Download Locale",
+  "admin.locale.forcePrefix": "Force Locale Prefix",
+  "admin.locale.forcePrefixHint": "Paths without a locale code will always be redirected to the primary locale.",
   "admin.locale.name": "Name",
   "admin.locale.namespaces.hint": "Enables multiple language versions of the same page.",
   "admin.locale.namespaces.label": "Multilingual Namespaces",
@@ -375,6 +378,8 @@
   "admin.locale.namespacingPrefixWarning.subtitle": "Paths without a locale code will be automatically redirected to the base locale defined above.",
   "admin.locale.namespacingPrefixWarning.title": "The locale code will be prefixed to all paths. (e.g. /{langCode}/page-name)",
   "admin.locale.nativeName": "Native Name",
+  "admin.locale.primary": "Primary Locale",
+  "admin.locale.primaryHint": "The locale to use as default / fallback for this site.",
   "admin.locale.rtl": "RTL",
   "admin.locale.settings": "Locale Settings",
   "admin.locale.sideload": "Sideload Locale Package",
