feat: check for updates dialog

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -770,17 +770,20 @@
   "admin.system.databaseHostHint": "The hostname used to access the database.",
   "admin.system.dbPartialSupport": "Your database version is not fully supported. Some functionality may be limited or not work as expected.",
   "admin.system.engines": "Server Engines",
+  "admin.system.fetchingLatestVersionInfo": "Fetching latest version info...",
   "admin.system.hostInfo": "Server Host Information",
   "admin.system.hostname": "Hostname",
   "admin.system.hostnameHint": "The hostname of the server / container.",
   "admin.system.latestVersion": "Latest Version",
   "admin.system.latestVersionHint": "The latest version available to install.",
+  "admin.system.newVersionAvailable": "A new version is available.",
   "admin.system.nodejsHint": "The version of Node.js installed.",
   "admin.system.os": "Operating System",
   "admin.system.osHint": "The OS Wiki.js is running on.",
   "admin.system.published": "Published",
   "admin.system.ramUsage": "RAM Usage: {used} / {total}",
   "admin.system.refreshSuccess": "System Info has been refreshed.",
+  "admin.system.runningLatestVersion": "You're running the latest version.",
   "admin.system.subtitle": "Information about your server / client",
   "admin.system.title": "System Info",
   "admin.system.totalRAM": "Total RAM",
