--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -1517,6 +1517,7 @@
   "editor.pageRel.title": "Add Page Relation",
   "editor.pageRel.titleEdit": "Edit Page Relation",
   "editor.pageScripts.title": "Page Scripts",
+  "editor.props.alias": "Alias",
   "editor.props.allowComments": "Allow Comments",
   "editor.props.allowCommentsHint": "Enable commenting abilities on this page.",
   "editor.props.allowContributions": "Allow Contributions",
@@ -1642,6 +1643,7 @@
   "fileman.rarFileType": "RAR Archive",
   "fileman.renameFolderInvalidData": "One or more fields are invalid.",
   "fileman.renameFolderSuccess": "Folder renamed successfully.",
+  "fileman.searchFolder": "Search folder...",
   "fileman.svgFileType": "Scalable Vector Graphic",
   "fileman.tarFileType": "TAR Archive",
   "fileman.tgzFileType": "Gzipped TAR Archive",
