feat: search page UI (wip)

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -1752,6 +1752,9 @@
   "profile.title": "Profile",
   "profile.uploadNewAvatar": "Upload New Image",
   "profile.viewPublicProfile": "View Public Profile",
+  "search.filters": "Filters",
+  "search.results": "Search Results",
+  "search.sortBy": "Sort By",
   "tags.clearSelection": "Clear Selection",
   "tags.currentSelection": "Current Selection",
   "tags.locale": "Locale",
